# Competitor-Intel

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  AGENTS.md  LICENSE  MIGRATED.md  Makefile  README.md  STATUS.md  alembic.ini  automation  collectors  docker-compose.yml  intel.py  package.json  pyproject.toml  pyrightconfig.json  renovate.json  run_intel.py
.github/: PULL_REQUEST_TEMPLATE.md  linear.config.json
.github/scripts/: linear_commit_sync.py
.github/workflows/: ci.yml  linear-sync.yml
apps/api/: package.json
apps/api/src/: companyResolve.ts  dataAuditRegistry.ts  db.ts  dbCounts.ts  enrichQueues.ts  index.ts  ingestCatalog.ts  nativeSemanticSearch.ts  requiredTables.ts  schemas.ts  semanticSearch.ts  signalDisplay.ts
apps/api/src/middleware/: auth.ts  rateLimit.ts
apps/api/src/routes/: alerts.ts  companies.ts  competitors.ts  dataAudit.ts  discovery.ts  events.ts  funding.ts  jobs.ts  scoring.ts  search.ts  signals.ts  status.ts  trending.ts
apps/api/test/: auth.test.ts  healthSchema.test.ts  rateLimit.test.ts  routes.test.ts
apps/cli/: README.md  healthcheck.py  intel.py  query.py  retrieval.py  run_intel.py  semantic_search.py  sources.py
apps/dashboard/: README.md  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
apps/dashboard/e2e/: smoke.spec.ts
apps/dashboard/src/: app.css  app.d.ts  app.html
apps/dashboard/src/lib/: api.ts  format.test.ts  format.ts  freshness.ts  provenance.ts  queryClient.ts
apps/dashboard/src/lib/components/: CorroborationBadge.svelte  DarkModeToggle.svelte  EmptyState.svelte  FreshnessBanner.svelte  IntelHealthCard.svelte  PageHeader.svelte  SearchBar.svelte  SourceTag.svelte  SourceTierPill.svelte  StatCard.svelte
apps/dashboard/src/lib/types/: company.ts  dataAudit.ts  profileClaims.ts  status.ts  structured-intel.ts
apps/dashboard/src/routes/: +error.svelte  +layout.svelte  +page.svelte
apps/dashboard/src/routes/companies/: +page.svelte
apps/dashboard/src/routes/data-quality/: +page.svelte
apps/dashboard/src/routes/discovery/: +page.svelte
apps/worker/: README.md  create_intelligence_events.py  daily_brief.py  daily_intel.py  discord_bot.py  discord_report.py  discord_reporter.py  edgar_form_d_weekly.py  embed_companies.py  embed_funding_events.py  embeddings.py  env_presets.py  frequent_intel.py  full_backfill.py  generate_intel_report.py  generate_obsidian_notes.py  grok_refresh.py  ingest_staging.py  investor_tiers.py  obsidian_profile_generator.py  test_pipeline.py  tweet_generator.py
apps/worker/automation/: collector_registry.py  continuous_ingest.py  enterprise_collect.py  parallel_collect.py  pipeline_runner.py  run_utils.py
apps/worker/x_refresh/: __init__.py  fetch.py  fetch_xurl.py
data/: .gitkeep  ingest_catalog.json
data/obsidian/Templates/: Company_Overview.md  Company_Overview_Template.md  Founders.md  Funding_History.md  Funding_Template.md  Investors.md  Key_Metrics.md  Product_Updates.md  Timeline.md
docs/: AGENT_HANDOFF.md  ARCHITECTURE.md  CONFIDENCE_SCORING.md  DATA_AUDIT.md  DEPLOY.md  ENGINEERING.md  ENTERPRISE_FREEZE.md  EXECUTION_CHECKLIST.md  HANDBOOK.md  HERMES_INTEGRATION.md  JOBS.md  LINEAR.md  LINTING.md  PIPELINE.md  PRODUCT_BRIEF.md  README.md  ROADMAP.md  ROADMAP_ENTRYPOINTS.md  ROADMAP_PRODUCTION.md  SCHEDULING.md  SIGNOFF.md  SQLITE.md  SQLITE_TUNING_RESEARCH.md  TRACK4_ENTERPRISE.md  TRACK5_DOSSIER_DEPTH.md  V1_PIPELINE.md  audit-file-by-file-2026-05-19.md
docs/architecture/: HERMES_INTEGRATION.md  MONOREPO.md  PYTHON_VS_RUST.md
infra/scripts/: dedupe_raw_signals.py
integrations/: __init__.py
integrations/hermes/: README.md  call_intel.py  call_intel.sh  cron_daily_prod.py  cron_edgar_weekly.py  cron_frequent.py  cron_grok_refresh.py  cron_runner.py  ingest_grok_x.py  install_hermes_cron_scripts.py  monorepo_env.py  run_daily_prod.py
integrations/linear/: __init__.py  commit_sync.py
scripts/: __init__.py  claims_audit.py  company_enrich_apply.py  company_enrich_export.py  enrich_queue_apply.py  enrich_queue_export.py  eval_golden_set.py  export_ingest_catalog.py  export_x_monitor_queries.py  fetch_grok_x.py  fetch_x.py  fetch_xurl.py  funding_enrich_apply.py  funding_enrich_export.py  grok_x_normalize.py  healthcheck.sh  migrate_ci_db.py  relink_actionable_orphans.py  reprocess_raw_signals.py  seed_ci_e2e.py  smoke_hermes_x_pipeline.py  sqlite_health.py
tests/: __init__.py  conftest.py  test_alert_engine.py  test_api_enrich.py  test_browser_fetch.py  test_cap_table_rollup.py  test_collector.py  test_collector_contracts.py  test_collector_registry.py  test_company_data.py  test_company_valuation.py  test_confidence_scoring.py  test_daily_intel_abort.py  test_db_connection.py  test_db_locked_retry.py  test_dedup_helpers.py  test_discovery_pipeline.py  test_edgar_form_d_bulk.py  test_enrich_queue.py  test_enterprise_guard.py  test_entity_extract.py  test_entity_resolution.py  test_extract_raw_signals_bulk.py  test_fetch_x_dispatch.py  test_funding_corroboration.py  test_funding_enricher.py  test_funding_parse.py  test_funding_read.py  test_funding_rollup_behavior.py  test_funding_rumor_detector.py  test_http_utils.py  test_ingest.py  test_intel_quality_gate.py  test_job_claims.py  test_linear_commit_sync.py  test_models.py  test_operational_pipeline.py  test_parallel_collect_staging.py  test_pipeline_guard.py  test_regulatory_extract.py  (+16 more)
tests/fixtures/: __init__.py  golden_signals.jsonl  hn_showstories.json  hn_story_424242.json  minimal_schemas.py  rss_minimal.xml  xurl_search_sample.json
tests/integration/: smoke_hermes_x_pipeline.py
tests/tools/: golden_eval.py
(+10 files in other folders)
