[project]
name = "competitor-intel-workspace"
version = "2.1.0"
description = "Competitive intelligence monorepo — collectors, API, dashboard, workers"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "competitor-intel-core",
    "competitor-intel-collectors",
    "competitor-intel",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "factory-boy>=3.3.3",
    "respx>=0.22.0",
    "pip-audit>=2.9.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/py-core",
    "packages/py-collectors",
    "packages/py-enterprise",
]

[tool.uv.sources]
competitor-intel-core = { workspace = true }
competitor-intel-collectors = { workspace = true }
competitor-intel = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not enterprise'"
asyncio_mode = "auto"
markers = [
    "operational: SQLite daily pipeline (default in make test)",
    "enterprise: SQLAlchemy enterprise package (optional; make test-all)",
]
filterwarnings = [
    "ignore::DeprecationWarning:competitor_intel",
]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
fail_under = 80
show_missing = true
include = [
    "packages/py-core/db/migrations.py",
    "packages/py-core/db/connection.py",
    "packages/py-collectors/collectors/signal_processor.py",
    "packages/py-collectors/collectors/signal_company_resolver.py",
    "packages/py-core/utils/http.py",
]
